istio/bootstrap/testdata/cluster.json
{
  "version_info": "2024-03-12T13:20:24Z/18",
  "cluster": {
    "@type": "type.googleapis.com/envoy.config.cluster.v3.Cluster",
    "name": "outbound|8000||httpbin.foo.svc.cluster.local",
    "type": "EDS",
    "eds_cluster_config": {
      "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s",
        "resource_api_version": "V3"
      },
      "service_name": "outbound|8000||httpbin.foo.svc.cluster.local"
    },
    "connect_timeout": "10s",
    "lb_policy": "LEAST_REQUEST",
    "circuit_breakers": {
      "thresholds": [
        {
          "max_connections": 4294967295,
          "max_pending_requests": 4294967295,
          "max_requests": 4294967295,
          "max_retries": 4294967295,
          "track_remaining": true
        }
      ]
    },
    "metadata": {
      "filter_metadata": {
        "istio": {
          "services": [
            {
              "host": "httpbin.foo.svc.cluster.local",
              "namespace": "foo",
              "name": "httpbin"
            }
          ]
        }
      }
    },
    "common_lb_config": {
      "locality_weighted_lb_config": {}
    },
    "filters": [
      {
        "name": "istio.metadata_exchange",
        "typed_config": {
          "@type": "type.googleapis.com/udpa.type.v1.TypedStruct",
          "type_url": "type.googleapis.com/envoy.tcp.metadataexchange.config.MetadataExchange",
          "value": {
            "protocol": "istio-peer-exchange",
            "enable_discovery": true
          }
        }
      }
    ],
    "transport_socket_matches": [
      {
        "name": "tlsMode-istio",
        "match": {
          "tlsMode": "istio"
        },
        "transport_socket": {
          "name": "envoy.transport_sockets.tls",
          "typed_config": {
            "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
            "common_tls_context": {
              "combined_validation_context": {
                "default_validation_context": {
                  "match_subject_alt_names": [
                    {
                      "exact": "spiffe://cluster.local/ns/foo/sa/httpbin"
                    }
                  ]
                },
              }
            },
            "sni": "outbound_.8000_._.httpbin.foo.svc.cluster.local"
          }
        }
      },
      {
        "name": "tlsMode-disabled",
        "match": {},
        "transport_socket": {
          "name": "envoy.transport_sockets.raw_buffer",
          "typed_config": {
            "@type": "type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer"
          }
        }
      }
    ]
  },
  "last_updated": "2024-03-12T13:20:24.813Z"
}
