istio/bootstrap/testdata/envoy.tls.secret.default.json
{
  "name": "default",
  "Type": {
    "TlsCertificate": {
      "certificate_chain": {
        "Specifier": {
          "InlineBytes": "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURQVENDQWlXZ0F3SUJBZ0lSQU5xTlpDbzEranhDT0ZJKzMzSVNGcnd3RFFZSktvWklodmNOQVFFTEJRQXcKR0RFV01CUUdBMVVFQ2hNTlkyeDFjM1JsY2k1c2IyTmhiREFlRncweU5EQXpNVGd3TVRJeE1UZGFGdzB5TkRBegpNVGt3TVRJek1UZGFNQUF3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRREJXMnkrCmVWQTVoZG9EbXNSam5YTzJHL0xkbkJIYmF0eElZQjU2QUptZnN2dys4aHlhRm1RczI5d3I2QjFEanFaMlVwYnoKRmlNdno2M3ZwL0JTcGptaVF6RFFSK2tZbXl4Y1RPSlRSb2dnV29nNHVjdVJXZ2RjdXIwZFhJOGRDdDJ1Z0xHVgpEQW [...]
        }
      },
      "private_key": {
        "Specifier": {
          "InlineBytes": "LS0tLS1CRUdJTiBSU0EgUFJJVkFURSBLRVktLS0tLQpNSUlFb3dJQkFBS0NBUUVBd1Z0c3ZubFFPWVhhQTVyRVk1MXp0aHZ5M1p3UjIycmNTR0FlZWdDWm43TDhQdkljCm1oWmtMTnZjSytnZFE0Nm1kbEtXOHhZakw4K3Q3NmZ3VXFZNW9rTXcwRWZwR0pzc1hFemlVMGFJSUZxSU9MbkwKa1ZvSFhMcTlIVnlQSFFyZHJvQ3hsUXdJRnM1Mmh5aUdKdmtoWUVhU3lBaW5qQlFTcExYcXRHbVRjeWlXeXZ2RgprWlExdDNURWhzS0R0akttNEM5QzRQVndIU3hlV1llQzlwWU5qZ3RDbTQ2bXRPT3Y1aklCd2x1c3F5UW9abDhrCnhXWXYvRHVEZFBTZGtqWXBmMnFnZlBUclBuS0ZqTms5blY1TS9hTXNPOEJhUDEra0lXblQxLzFIV2d6cWVhK0 [...]
        }
      }
    }
  }
}
