istio/bootstrap/testdata/envoy.tls.secret.ROOTCA.json
{
  "name": "ROOTCA",
  "Type": {
    "ValidationContext": {
      "trusted_ca": {
        "Specifier": {
          "InlineBytes": "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvRENDQWVTZ0F3SUJBZ0lRZFdGdTNWeHJvSldMSEcrQ3N2SXF2ekFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFLRXcxamJIVnpkR1Z5TG14dlkyRnNNQjRYRFRJME1ETXhNakV5TWpBeE5Wb1hEVE0wTURNeApNREV5TWpBeE5Wb3dHREVXTUJRR0ExVUVDaE1OWTJ4MWMzUmxjaTVzYjJOaGJEQ0NBU0l3RFFZSktvWklodmNOCkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFQWWUwZkFxTnVleXhzeGU5YURRYzJBS1llTFFDNXl1MGNUeENudGcKYisvRXBLWHhFQkhKZUZCb2xocGw0MHk2cXhSRkdVekVOT0lpOUlPZ2Z6MGdsbytqNUJBOEQyOEprT0dvQTJlUQpERT [...]
        }
      }
    }
  }
}
