istio/bootstrap/testdata/listener-15006-disable.json
{
  "name": "virtualInbound",
  "address": {
    "Address": {
      "SocketAddress": {
        "address": "0.0.0.0",
        "PortSpecifier": {
          "PortValue": 15006
        }
      }
    }
  },
  "filter_chains": [
    {
      "filter_chain_match": {
        "destination_port": {
          "value": 15006
        }
      },
      "filters": [
        {
          "name": "istio.metadata_exchange",
          "ConfigType": {
            "TypedConfig": {
              "type_url": "type.googleapis.com/udpa.type.v1.TypedStruct",
              "value": "CkZ0eXBlLmdvb2dsZWFwaXMuY29tL2Vudm95LnRjcC5tZXRhZGF0YWV4Y2hhbmdlLmNvbmZpZy5NZXRhZGF0YUV4Y2hhbmdlEjsKFgoQZW5hYmxlX2Rpc2NvdmVyeRICIAEKIQoIcHJvdG9jb2wSFRoTaXN0aW8tcGVlci1leGNoYW5nZQ=="
            }
          }
        },
        {
          "name": "istio.stats",
          "ConfigType": {
            "TypedConfig": {
              "type_url": "type.googleapis.com/stats.PluginConfig",
              "value": "MAE="
            }
          }
        },
        {
          "name": "envoy.filters.network.tcp_proxy",
          "ConfigType": {
            "TypedConfig": {
              "type_url": "type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy",
              "value": "ChBCbGFja0hvbGVDbHVzdGVyEhBCbGFja0hvbGVDbHVzdGVy"
            }
          }
        }
      ],
      "name": "virtualInbound-blackhole"
    },
    {
      "filter_chain_match": {
        "prefix_ranges": [
          {
            "address_prefix": "0.0.0.0",
            "prefix_len": {}
          }
        ],
        "transport_protocol": "raw_buffer",
        "application_protocols": [
          "http/1.1",
          "h2c"
        ]
      },
      "filters": [
        {
          "name": "istio.metadata_exchange",
          "ConfigType": {
            "TypedConfig": {
              "type_url": "type.googleapis.com/udpa.type.v1.TypedStruct",
              "value": "CkZ0eXBlLmdvb2dsZWFwaXMuY29tL2Vudm95LnRjcC5tZXRhZGF0YWV4Y2hhbmdlLmNvbmZpZy5NZXRhZGF0YUV4Y2hhbmdlEjsKFgoQZW5hYmxlX2Rpc2NvdmVyeRICIAEKIQoIcHJvdG9jb2wSFRoTaXN0aW8tcGVlci1leGNoYW5nZQ=="
            }
          }
        },
        {
          "name": "envoy.filters.network.http_connection_manager",
          "ConfigType": {
            "TypedConfig": {
              "type_url": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
              "value": "Eh1JbmJvdW5kUGFzc3Rocm91Z2hDbHVzdGVySXB2NCqSAgoXaXN0aW8ubWV0YWRhdGFfZXhjaGFuZ2Ui9gEKLHR5cGUuZ29vZ2xlYXBpcy5jb20vdWRwYS50eXBlLnYxLlR5cGVkU3RydWN0EsUBCjZ0eXBlLmdvb2dsZWFwaXMuY29tL2lvLmlzdGlvLmh0dHAucGVlcl9tZXRhZGF0YS5Db25maWcSigEKUQoUZG93bnN0cmVhbV9kaXNjb3ZlcnkSOTI3ChcqFQoTCg1pc3Rpb19oZWFkZXJzEgIqAAocKhoKGAoSd29ya2xvYWRfZGlzY292ZXJ5EgIqAAo1ChZkb3duc3RyZWFtX3Byb3BhZ2F0aW9uEhsyGQoXKhUKEwoNaXN0aW9faGVhZGVycxICKgAqdQodZW52b3kuZmlsdGVycy5odHRwLmdycGNfc3RhdHMiVApMdHlwZS5nb29nbGVh [...]
            }
          }
        }
      ],
      "name": "virtualInbound-catchall-http"
    },
    {
      "filter_chain_match": {
        "prefix_ranges": [
          {
            "address_prefix": "0.0.0.0",
            "prefix_len": {}
          }
        ],
        "transport_protocol": "raw_buffer"
      },
      "filters": [
        {
          "name": "istio.metadata_exchange",
          "ConfigType": {
            "TypedConfig": {
              "type_url": "type.googleapis.com/udpa.type.v1.TypedStruct",
              "value": "CkZ0eXBlLmdvb2dsZWFwaXMuY29tL2Vudm95LnRjcC5tZXRhZGF0YWV4Y2hhbmdlLmNvbmZpZy5NZXRhZGF0YUV4Y2hhbmdlEjsKFgoQZW5hYmxlX2Rpc2NvdmVyeRICIAEKIQoIcHJvdG9jb2wSFRoTaXN0aW8tcGVlci1leGNoYW5nZQ=="
            }
          }
        },
        {
          "name": "istio.stats",
          "ConfigType": {
            "TypedConfig": {
              "type_url": "type.googleapis.com/stats.PluginConfig",
              "value": "MAE="
            }
          }
        },
        {
          "name": "envoy.filters.network.tcp_proxy",
          "ConfigType": {
            "TypedConfig": {
              "type_url": "type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy",
              "value": "Ch1JbmJvdW5kUGFzc3Rocm91Z2hDbHVzdGVySXB2NCqQBQoZZW52b3kuYWNjZXNzX2xvZ2dlcnMuZmlsZSLyBApJdHlwZS5nb29nbGVhcGlzLmNvbS9lbnZveS5leHRlbnNpb25zLmFjY2Vzc19sb2dnZXJzLmZpbGUudjMuRmlsZUFjY2Vzc0xvZxKkBAoLL2Rldi9zdGRvdXQqlAQqkQQajgRbJVNUQVJUX1RJTUUlXSAiJVJFUSg6TUVUSE9EKSUgJVJFUShYLUVOVk9ZLU9SSUdJTkFMLVBBVEg/OlBBVEgpJSAlUFJPVE9DT0wlIiAlUkVTUE9OU0VfQ09ERSUgJVJFU1BPTlNFX0ZMQUdTJSAlUkVTUE9OU0VfQ09ERV9ERVRBSUxTJSAlQ09OTkVDVElPTl9URVJNSU5BVElPTl9ERVRBSUxTJSAiJVVQU1RSRUFNX1RSQU5TUE9SVF9GQUlM [...]
            }
          }
        }
      ],
      "name": "virtualInbound"
    },
    {
      "filter_chain_match": {
        "prefix_ranges": [
          {
            "address_prefix": "::",
            "prefix_len": {}
          }
        ],
        "transport_protocol": "raw_buffer",
        "application_protocols": [
          "http/1.1",
          "h2c"
        ]
      },
      "filters": [
        {
          "name": "istio.metadata_exchange",
          "ConfigType": {
            "TypedConfig": {
              "type_url": "type.googleapis.com/udpa.type.v1.TypedStruct",
              "value": "CkZ0eXBlLmdvb2dsZWFwaXMuY29tL2Vudm95LnRjcC5tZXRhZGF0YWV4Y2hhbmdlLmNvbmZpZy5NZXRhZGF0YUV4Y2hhbmdlEjsKFgoQZW5hYmxlX2Rpc2NvdmVyeRICIAEKIQoIcHJvdG9jb2wSFRoTaXN0aW8tcGVlci1leGNoYW5nZQ=="
            }
          }
        },
        {
          "name": "envoy.filters.network.http_connection_manager",
          "ConfigType": {
            "TypedConfig": {
              "type_url": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
              "value": "Eh1JbmJvdW5kUGFzc3Rocm91Z2hDbHVzdGVySXB2NiqSAgoXaXN0aW8ubWV0YWRhdGFfZXhjaGFuZ2Ui9gEKLHR5cGUuZ29vZ2xlYXBpcy5jb20vdWRwYS50eXBlLnYxLlR5cGVkU3RydWN0EsUBCjZ0eXBlLmdvb2dsZWFwaXMuY29tL2lvLmlzdGlvLmh0dHAucGVlcl9tZXRhZGF0YS5Db25maWcSigEKUQoUZG93bnN0cmVhbV9kaXNjb3ZlcnkSOTI3ChcqFQoTCg1pc3Rpb19oZWFkZXJzEgIqAAocKhoKGAoSd29ya2xvYWRfZGlzY292ZXJ5EgIqAAo1ChZkb3duc3RyZWFtX3Byb3BhZ2F0aW9uEhsyGQoXKhUKEwoNaXN0aW9faGVhZGVycxICKgAqdQodZW52b3kuZmlsdGVycy5odHRwLmdycGNfc3RhdHMiVApMdHlwZS5nb29nbGVh [...]
            }
          }
        }
      ],
      "name": "virtualInbound-catchall-http"
    },
    {
      "filter_chain_match": {
        "prefix_ranges": [
          {
            "address_prefix": "::",
            "prefix_len": {}
          }
        ],
        "transport_protocol": "raw_buffer"
      },
      "filters": [
        {
          "name": "istio.metadata_exchange",
          "ConfigType": {
            "TypedConfig": {
              "type_url": "type.googleapis.com/udpa.type.v1.TypedStruct",
              "value": "CkZ0eXBlLmdvb2dsZWFwaXMuY29tL2Vudm95LnRjcC5tZXRhZGF0YWV4Y2hhbmdlLmNvbmZpZy5NZXRhZGF0YUV4Y2hhbmdlEjsKFgoQZW5hYmxlX2Rpc2NvdmVyeRICIAEKIQoIcHJvdG9jb2wSFRoTaXN0aW8tcGVlci1leGNoYW5nZQ=="
            }
          }
        },
        {
          "name": "istio.stats",
          "ConfigType": {
            "TypedConfig": {
              "type_url": "type.googleapis.com/stats.PluginConfig",
              "value": "MAE="
            }
          }
        },
        {
          "name": "envoy.filters.network.tcp_proxy",
          "ConfigType": {
            "TypedConfig": {
              "type_url": "type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy",
              "value": "Ch1JbmJvdW5kUGFzc3Rocm91Z2hDbHVzdGVySXB2NiqQBQoZZW52b3kuYWNjZXNzX2xvZ2dlcnMuZmlsZSLyBApJdHlwZS5nb29nbGVhcGlzLmNvbS9lbnZveS5leHRlbnNpb25zLmFjY2Vzc19sb2dnZXJzLmZpbGUudjMuRmlsZUFjY2Vzc0xvZxKkBAoLL2Rldi9zdGRvdXQqlAQqkQQajgRbJVNUQVJUX1RJTUUlXSAiJVJFUSg6TUVUSE9EKSUgJVJFUShYLUVOVk9ZLU9SSUdJTkFMLVBBVEg/OlBBVEgpJSAlUFJPVE9DT0wlIiAlUkVTUE9OU0VfQ09ERSUgJVJFU1BPTlNFX0ZMQUdTJSAlUkVTUE9OU0VfQ09ERV9ERVRBSUxTJSAlQ09OTkVDVElPTl9URVJNSU5BVElPTl9ERVRBSUxTJSAiJVVQU1RSRUFNX1RSQU5TUE9SVF9GQUlM [...]
            }
          }
        }
      ],
      "name": "virtualInbound"
    }
  ],
  "listener_filters": [
    {
      "name": "envoy.filters.listener.original_dst",
      "ConfigType": {
        "TypedConfig": {
          "type_url": "type.googleapis.com/envoy.extensions.filters.listener.original_dst.v3.OriginalDst"
        }
      }
    },
    {
      "name": "envoy.filters.listener.http_inspector",
      "ConfigType": {
        "TypedConfig": {
          "type_url": "type.googleapis.com/envoy.extensions.filters.listener.http_inspector.v3.HttpInspector"
        }
      },
      "filter_disabled": {
        "Rule": {
          "DestinationPortRange": {
            "start": 15006,
            "end": 15007
          }
        }
      }
    }
  ],
  "listener_filters_timeout": {},
  "continue_on_listener_filters_timeout": true,
  "traffic_direction": 1,
  "access_log": [
    {
      "name": "envoy.access_loggers.file",
      "filter": {
        "FilterSpecifier": {
          "ResponseFlagFilter": {
            "flags": [
              "NR"
            ]
          }
        }
      },
      "ConfigType": {
        "TypedConfig": {
          "type_url": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
          "value": "CgsvZGV2L3N0ZG91dCqUBCqRBBqOBFslU1RBUlRfVElNRSVdICIlUkVRKDpNRVRIT0QpJSAlUkVRKFgtRU5WT1ktT1JJR0lOQUwtUEFUSD86UEFUSCklICVQUk9UT0NPTCUiICVSRVNQT05TRV9DT0RFJSAlUkVTUE9OU0VfRkxBR1MlICVSRVNQT05TRV9DT0RFX0RFVEFJTFMlICVDT05ORUNUSU9OX1RFUk1JTkFUSU9OX0RFVEFJTFMlICIlVVBTVFJFQU1fVFJBTlNQT1JUX0ZBSUxVUkVfUkVBU09OJSIgJUJZVEVTX1JFQ0VJVkVEJSAlQllURVNfU0VOVCUgJURVUkFUSU9OJSAlUkVTUChYLUVOVk9ZLVVQU1RSRUFNLVNFUlZJQ0UtVElNRSklICIlUkVRKFgtRk9SV0FSREVELUZPUiklIiAiJVJFUShVU0VSLUFHRU5UKSUiICIlUkVRKFgt [...]
        }
      }
    }
  ],
  "ListenerSpecifier": null
}
