istio/bootstrap/testdata/test-jwt.txt
=== RUN   TestValidateAndParseJWT
token1: eyJhbGciOiJSUzI1NiIsImtpZCI6ImtleTEiLCJ0eXAiOiJKV1QifQ.eyJhdWQiOlsiZGV2Il0sImV4cCI6MjAyNjg2OTMwNiwiaWF0IjoxNzExNTA5MzA2LCJpc3MiOiJodHRwczovL2R1YmJvLmFwYWNoZS5vcmcvIiwic3ViIjoic3BpZmZlOi8vY2x1c3Rlci5sb2NhbC9ucy9mb28vc2EvaHR0cGJpbiJ9.k-WO1bW8LVeEAungU-73PdYwqMQWkxYa9gpGtZPnsZtZFut6gSfwGwSvFe4AXzAQp0Un817W9iukNus0smYcgl9Dn-tRrfN6JVQIROZl709iwD0NeK8iHxzn9EMyDQ716bJUgu5eHnLUFSwj34kOnMfuoQT-9ZomP1QVZU4l_-LkmitG6Czf7RFrylSVqvSwR1WDa7NQT6ERGzsQweBbkaFp0UjYOARI9VuHvnZaEw9oYwGX8-UK9VLcFdthiPL39sAs [...]
token2: eyJhbGciOiJSUzI1NiIsImtpZCI6ImtleTEiLCJ0eXAiOiJKV1QifQ.eyJhdWQiOlsidGVzdCJdLCJleHAiOjIwMjY4NjkzMDYsImlhdCI6MTcxMTUwOTMwNiwiaXNzIjoiaHR0cHM6Ly9kdWJiby5hcGFjaGUub3JnLyIsInN1YiI6InNwaWZmZTovL2NsdXN0ZXIubG9jYWwvbnMvZm9vL3NhL2h0dHBiaW4ifQ.ZxYStdBxZ_VTJxSVjp2WdJxX7ZdFsJmAOQS1AhN6tf7hA9g3lChkxXMe9U6_i3rQHOpwhSmDxd0BD1CRSRhGJCtW6LU-QojLpqzta5S2uDUpkf3MKc_Qh1Pd6IQyEHgg_9cHAGyL8iD34_ypkvBH9wTCnjFy8VjsGUQ-iV9Gd3xG_k_UH5nM60rUWZBzv_jsusxNScOiKELSb-9rUpUevk2rUHBQ7oajM2-OkKGZGtQX0ASTbBgpUwoFSCgW8M6uCD [...]
token3: eyJhbGciOiJSUzI1NiIsImtpZCI6ImtleTEiLCJ0eXAiOiJKV1QifQ.eyJhdWQiOlsic2xlZXAiXSwiZXhwIjoyMDI2ODY5MzA2LCJpYXQiOjE3MTE1MDkzMDYsImlzcyI6Imh0dHBzOi8vZHViYm8uYXBhY2hlLm9yZy8iLCJzdWIiOiJzcGlmZmU6Ly9jbHVzdGVyLmxvY2FsL25zL2Zvby9zYS9zbGVlcCJ9.OMfKSnl2y10UOpj3-eYTbk5SCv11l93SZlA4KudPh48zjNCGm6RhfRpPdZjOyRDF_Kau7XAZ5rG7b1yE2rBF8Dym0RJGMw4WS74e1fdmH6hhz_HalabcobZPcvSzTkrO9MpWbttN5ZFjZSyb3_QkXJt-cmsnSGyfItTM_hjU4XU6XfZduyGK3wfTZuMeShTuZQiwFW25IgWwQS8N8o8xd91QIDkbRyqbre5EyHPi5a7cGpcbNlkUUO2BOjDknKNCwwFh [...]
keyset: {"keys":[{"alg":"RS256","e":"AQAB","kid":"key1","kty":"RSA","n":"tI4hr2gYjv1YJ98eVn5IGyCqH7ylXOdx-QSwb-ERxvweJDUMZcLx62dIELXwM8Jv1iOl3pDRBvk6Gl7CYSqNblsXvtnKwCUBAkv7IKGjlIjZSIBhO6J7n33M3T-BDf0YBWHpHAEuOXOwIn19w0jeGSTgTF6u3AuGXa6lZMqtxKbaWsA2c621LB8hB2s6aAOe01FEl3-e037lsuIgMKYQJUBGfoGy4OlIukVZz3M3BwbJiuuIUVl_JjVR0Nt-FuM8rXOdjWFOgn1XUz269dUv22dm3u1EJ3wpJ12rfUDtANrosk-2d32qURLwkb7DeALj8pTCayT0Qz44YjBEtROo1w"},{"alg":"none","k":"Ym9ndXM","kid":"key2","kty":"oct"}]}
